# Parkour_NoToTFamily

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  codeql.yml  mobile-ci.yml  web-admin-ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_05_14_0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  chat.py  spots.py  users.py  videos.py  ws.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  chat.py  spot.py  user.py  video.py
backend/app/repositories/: chat.py  spots.py  users.py  videos.py
backend/app/schemas/: auth.py  chat.py  spot.py  user.py  video.py
backend/app/services/: auth_service.py  chat_service.py  spot_service.py
backend/tests/: conftest.py  test_health.py  test_security.py
docs/: ARCHITECTURE.md  DATA_MODEL.md  SPOT_VERIFICATION.md
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/test/: widget_test.dart
web-admin/: Dockerfile  README.md  package.json
web-admin/src/app/: globals.css  layout.tsx  page.tsx
web-admin/src/app/login/: page.tsx
web-admin/src/app/spots/: page.tsx
(+2 files in other folders)
