[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parkour-backend"
version = "0.1.0"
description = "Parkour NoToT Family API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "geoalchemy2>=0.15",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-jose[cryptography]>=3.3",
  "argon2-cffi>=23.1",
  "python-multipart>=0.0.9",
  "email-validator>=2.1",
  "httpx>=0.27",
  "redis>=5.0",
  "slowapi>=0.1.9",
  "structlog>=24.1",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-python-jose",
  "factory-boy>=3.3",
  "asgi-lifespan>=2.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101"]  # allow asserts in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
